Changed blog for Open Notebook

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,9 @@
           </div>
           
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Open Notebook</a>
             <a href="{{ site.baseurl }}/about">About</a>
+			<a href="{{ site.baseurl }}/_layouts/list_of_tag">Tags</a>
           </nav>
         </header>
       </div>
